--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project multi-k8s-344913
   - gcloud config set compute/zone us-central1-a
-  - gcloud-container clusters get-credentials multi-k8s
+  - gcloud container clusters get-credentials multi-k8s
   - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
   - docker build -t krobson/react-test -f ./client/Dockerfile.dev ./client 
 script:
