--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - gcloud components update kubectl
   - gcloud auth activate-service-account --key-file service-account.json
   - gcloud config set project multi-k8s-344913
-  - gcloud config set compute/zone us-central1-a
+  - gcloud config set compute/zone us-central1-c
   - gcloud container clusters get-credentials multi-k8s
   - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
   - docker build -t krobson/react-test -f ./client/Dockerfile.dev ./client 
