Fixed typo in secrets name.

--- a/k8s/server-deployment.yaml
+++ b/k8s/server-deployment.yaml
@@ -33,5 +33,5 @@ spec:
             - name: PGPASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: pgpasswd
+                  name: pgpassword
                   key: PGPASSWORD
